--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ body {
   .square:focus {
     outline: none;
   }
+
+  .square.highlight {
+    border: 1px solid red;
+  }
   
   .kbd-navigation .square:focus {
     background: #ddd;
